# eldritchdm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  PRIVACY.md  README.md  TERMS.md  ddmcpskills.md  docker-compose.observability.yml  docker-compose.yml  install.sh  pyproject.toml  run.py
.claude/memory/: MEMORY.md  git_opencode_root_push.md
.github/workflows/: ci.yml  perf.yml
.planning/: ADR-001-no-public-http-endpoints.md  ADR-template.md  COVERAGE-AUDIT-v1.14.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SECURITY-AUDIT-v1.11.md  SECURITY-BACKLOG.md  STATE.md  UPSTREAM-ISSUES.md  config.json  perf-baseline-v1.9.0.json  v1.0-MILESTONE-AUDIT.md  v1.1-INTEGRATION-CHECK.md  v1.1-MILESTONE-AUDIT.md  v1.10-MILESTONE-AUDIT.md  v1.11-MILESTONE-AUDIT.md  v1.12-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md  v1.7-MILESTONE-AUDIT.md  v1.8-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
.planning/debug/: knowledge-base.md
.planning/milestones/: COVERAGE-AUDIT-v1.14.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.11-REQUIREMENTS.md  v1.11-ROADMAP.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
database/: alerts.yaml  eligibility.yaml  pricing.yaml  schema.sql
database/dashboards/: budget.json  cache.json  character_cache.json  degraded_mode.json  eval.json  fallback.json  latency.json  mcp_cache.json  narrcache.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING-STARTED.md  PERFORMANCE.md  PLAYER_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  UPGRADE.md  character-ingest-formats.md  discord-app-setup.md  dm20-troubleshooting.md  eldritch-dm.service.example  launchd.plist.example
scripts/: install-launchd.sh  uninstall-launchd.sh
scripts/audit/: backfill_summary_frontmatter.py
scripts/ci/: check_safe_yaml.sh  check_summary_frontmatter.sh
scripts/observability/: seed-dashboards.sh
scripts/ops/: test_docker_smoke.sh
scripts/perf/: _schema.py  profile_hot_paths.py
src/eldritch_dm/: bootstrap.py  config.py  logging.py
src/eldritch_dm/bot/: bot.py  (+13 more)
tests/: conftest.py  test_bootstrap_preflight.py  test_config.py  test_ingest_backend.py  test_logging.py  test_main_entrypoint.py  test_run_entrypoint.py
tests/bot/: conftest.py  test_alert_evaluator_boot.py  test_bot_lifecycle.py  test_channel_edit_budget.py  test_circuit_decorator.py  test_coalescer.py  test_cog_diagnostics.py  test_defer_discipline.py  test_dm_offline_debouncer.py  test_dynamic_items.py  test_dynamic_items_combat_real.py  test_dynamic_items_declare_real.py  test_dynamic_items_real.py  test_embeds.py  test_embeds_combat_enriched.py  test_metrics_endpoint_boot.py  test_modals.py  test_modals_sanitization.py  test_modals_weapon_select.py  test_party_mode_parser.py  test_permissions.py  test_qr.py  test_restart_drill.py  test_setup_hook.py  test_warnings.py
tests/config/: test_token_guard.py
tests/eval/: test_aggregator.py  test_cli_args.py  test_cli_smoke.py  test_corpus_validation.py  test_judge_prompt.py  test_judge_verdict.py  test_narration_gate_corpus.py  test_reporter.py  test_runner.py  test_scenarios.py  test_tactical_judge.py
tests/gameplay/: __init__.py  test_aoe_addendum_loader.py  test_combat_outcome_parser.py  test_eligibility_loader.py  test_eligibility_watcher.py  test_exploration_batch.py  test_factory_degraded_mode.py  test_monster_driver.py  test_monster_driver_corpus.py  test_monster_driver_factory.py  test_monster_memory.py  test_normalize.py  test_party_mode.py  test_rate_limit.py  test_reactions.py  test_riposte_callback.py  test_riposte_sweeper.py  test_session_locks.py  test_smart_monster_driver.py  test_smart_monster_driver_streaming.py  test_turn_gatekeeper.py
tests/ingest/: conftest.py  test_executor.py  test_ocr.py  test_pdf.py  test_pipeline.py  test_schema.py  test_translate.py
tests/integration/: test_8player_load.py  test_circuit_open_warning.py  test_cold_start_e2e.py  test_combat_flow.py  test_degraded_mode.py  test_lobby_to_exploration_flow.py  test_multi_channel_stress.py  test_observability_smoke.py  test_phase1_smoke.py  test_phase3_smoke.py  test_restart_mid_combat.py  test_riposte_restart.py  test_riposte_smoke.py  test_sanitizer_audit_persistence.py
tests/mcp/: test_cache.py  test_cache_invalidation_wire.py  test_client.py  test_health.py  test_tools.py
tests/observability/: __init__.py  test_alert_evaluator.py  test_alerts_loader.py  test_budget_dm.py  test_budget_guard.py  test_buffer_dual_sink.py  test_cost.py  test_degraded_mode.py  test_disabled_noop.py  test_kpi.py  test_lazy_import.py  test_metrics_endpoint.py  test_metrics_lazy_import.py  test_narration_cache.py  test_narration_gate.py  test_narrcache_runtime.py  test_narrcache_spans.py  test_span_attributes.py  test_span_buffer.py  test_traced_eval.py
tests/perf/: test_perf_baseline_cli.py  test_perf_baseline_diff.py  test_perf_baseline_smoke.py  test_profiler_self_check.py
tests/persistence/: conftest.py  test_bootstrap.py  test_channel_sessions_repo.py  test_character_cache.py  test_checkpoint.py  test_concurrent_writes.py  test_connection.py  test_models.py  test_monster_memory_repo.py  test_pc_classes_repo.py  test_persistent_views_repo.py  test_riposte_timers_repo.py  test_sanitizer_audit_repo.py  test_writes_use_queue.py
tests/safety/: conftest.py  test_modal_sanitizer_corpus.py  test_sanitizer.py
tools/: gen_mcp_wrappers.py  lint_defer_discipline.py
(+348 files in other folders)
