[project]
name = "eldritch-dm"
version = "0.1.0"
description = "EldritchDM — Discord D&D 5e bot powered by dm20 + oMLX"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Jeremy Schoemaker", email = "jeremy@shoemoney.com" },
]

dependencies = [
  "discord.py>=2.7.1,<3.0",
  "httpx[http2]>=0.27,<0.29",
  "aiosqlite>=0.20,<0.22",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "tenacity>=8.5,<10.0",
  "structlog>=24.4,<26.0",
  "PyMuPDF>=1.24,<2.0",
  "pypdf>=4.3,<6.0",
  "openai>=1.55,<2.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "respx>=0.21,<1.0",
  "import-linter>=2.0,<3.0",
  "pyyaml>=6.0,<7.0",
]
# Platform-conditional OCR extras:
# install.sh does uv pip install ocrmac or easyocr based on platform.
# Declared here so they can be pinned / audited in one place.
mac-ocr = ["ocrmac>=1.0,<2.0"]
linux-ocr = ["easyocr>=1.7,<2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eldritch_dm"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = [
  "B008",    # do not perform function calls in default arguments — needed for pydantic Field defaults
  "ASYNC240", # pathlib.Path in async — used only in startup/bootstrap code, not hot paths
]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "slow: gated by RUN_STRESS=1 env var",
]
testpaths = ["tests"]

# ── import-linter ─────────────────────────────────────────────────────────────
# Module boundary firewall:
#   - persistence  may NOT import mcp or safety
#   - mcp          may NOT import persistence or safety
#   - safety       may NOT import mcp or persistence
#   - config + logging  may NOT import any of the three subsystems
#
# TODO: bot submodule (added in Phase 2+) is unrestricted — it may import
#       everything. Add a bot contract when the submodule is created.
[tool.importlinter]
root_packages = ["eldritch_dm"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "persistence must not import mcp or safety"
type = "forbidden"
source_modules = ["eldritch_dm.persistence"]
forbidden_modules = ["eldritch_dm.mcp", "eldritch_dm.safety"]

[[tool.importlinter.contracts]]
name = "mcp must not import persistence or safety"
type = "forbidden"
source_modules = ["eldritch_dm.mcp"]
forbidden_modules = ["eldritch_dm.persistence", "eldritch_dm.safety"]

[[tool.importlinter.contracts]]
name = "safety must not import mcp or persistence"
type = "forbidden"
source_modules = ["eldritch_dm.safety"]
forbidden_modules = ["eldritch_dm.mcp", "eldritch_dm.persistence"]

[[tool.importlinter.contracts]]
name = "config and logging must not import subsystems"
type = "forbidden"
source_modules = [
  "eldritch_dm.config",
  "eldritch_dm.logging",
]
forbidden_modules = [
  "eldritch_dm.mcp",
  "eldritch_dm.persistence",
  "eldritch_dm.safety",
]
