[project]
name = "eldritch-dm"
version = "0.1.0"
description = "EldritchDM — Discord D&D 5e bot powered by dm20 + oMLX"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Jeremy Schoemaker", email = "jeremy@shoemoney.com" },
]

dependencies = [
  "discord.py>=2.7.1,<3.0",
  "httpx[http2]>=0.27,<0.29",
  "aiosqlite>=0.20,<0.22",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "tenacity>=8.5,<10.0",
  "structlog>=24.4,<26.0",
  "PyMuPDF>=1.24,<2.0",
  "pypdf>=4.3,<6.0",
  "openai>=1.55,<2.0",
  "python-dotenv>=1.0,<2.0",
  "segno>=1.6,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-mock>=3.12,<4.0",
  "ruff>=0.6,<1.0",
  "respx>=0.21,<1.0",
  "import-linter>=2.0,<3.0",
  "pyyaml>=6.0,<7.0",
  "syrupy>=4.6,<5.0",
  # TODO(02-RESEARCH): dpytest deferred — see Q3; dpytest officially caps at discord.py 2.6
  # Plan 02: used in conftest to generate synthetic PDF fixtures for ingest tests
  "reportlab>=4.0,<5.0",
]
# Platform-conditional OCR extras:
# install.sh does uv pip install ocrmac or easyocr based on platform.
# Declared here so they can be pinned / audited in one place.
mac-ocr = ["ocrmac>=1.0,<2.0"]
linux-ocr = ["easyocr>=1.7,<2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eldritch_dm"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = [
  "B008",    # do not perform function calls in default arguments — needed for pydantic Field defaults
  "ASYNC240", # pathlib.Path in async — used only in startup/bootstrap code, not hot paths
]

[tool.ruff.lint.per-file-ignores]
# stress test: pytestmark (skipif) must be declared before subject imports,
# so imports after pytestmark are intentionally post-top-level (E402).
# Long doc comments with command lines exceed 100 chars (E501).
"tests/persistence/test_concurrent_writes.py" = ["E402", "E501"]
# Long assertion failure messages in parametrized tests exceed 100 chars (E501).
"tests/safety/test_sanitizer.py" = ["E501"]
# Ingest tests: mock side-effects with long lambdas exceed 100 chars (E501).
# B017: pytest.raises(Exception) intentional — frozen pydantic raises ValidationError or TypeError.
"tests/ingest/test_ocr.py" = ["E501"]
"tests/ingest/test_schema.py" = ["B017"]
"tests/ingest/test_pipeline.py" = ["E501"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "slow: gated by RUN_STRESS=1 env var",
]
testpaths = ["tests"]

# ── import-linter ─────────────────────────────────────────────────────────────
# Module boundary firewall:
#   - persistence  may NOT import mcp or safety
#   - mcp          may NOT import persistence or safety
#   - safety       may NOT import mcp or persistence
#   - config + logging  may NOT import any of the three subsystems
#   - bot/  is the integration layer and MAY import from everything;
#     but NOTHING outside bot/ may import from bot/
[tool.importlinter]
root_packages = ["eldritch_dm"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "persistence must not import mcp or safety"
type = "forbidden"
source_modules = ["eldritch_dm.persistence"]
forbidden_modules = ["eldritch_dm.mcp", "eldritch_dm.safety"]

[[tool.importlinter.contracts]]
name = "mcp must not import persistence or safety"
type = "forbidden"
source_modules = ["eldritch_dm.mcp"]
forbidden_modules = ["eldritch_dm.persistence", "eldritch_dm.safety"]

[[tool.importlinter.contracts]]
# safety may import persistence.models (pure pydantic data shapes — no SQL, no behavior).
# safety must NOT import persistence.connection, .bootstrap, .checkpoint, or any *_repo.
# (Plan 03 decision: option (a) — relax the import-linter contract for safety→persistence.models
# rather than duplicating the SanitizerAuditRow definition inside the safety module.)
name = "safety must not import mcp or persistence internals"
type = "forbidden"
source_modules = ["eldritch_dm.safety"]
forbidden_modules = [
  "eldritch_dm.mcp",
  "eldritch_dm.persistence.connection",
  "eldritch_dm.persistence.bootstrap",
  "eldritch_dm.persistence.checkpoint",
  "eldritch_dm.persistence.channel_sessions_repo",
  "eldritch_dm.persistence.persistent_views_repo",
  "eldritch_dm.persistence.riposte_timers_repo",
  "eldritch_dm.persistence.sanitizer_audit_repo",
]

[[tool.importlinter.contracts]]
name = "config and logging must not import subsystems"
type = "forbidden"
source_modules = [
  "eldritch_dm.config",
  "eldritch_dm.logging",
]
forbidden_modules = [
  "eldritch_dm.mcp",
  "eldritch_dm.persistence",
  "eldritch_dm.safety",
]

# bot/ is the integration layer; subsystems must remain hermetic and testable without Discord.
[[tool.importlinter.contracts]]
# ingest is a pure-Python pipeline module. It may import mcp.client (to call oMLX)
# and safety (for sanitize_player_input). safety imports persistence.models for audit
# types — that transitive path is permitted (same relaxation as safety's own contract).
# ingest must NOT directly import bot (Discord coupling) or persistence internals (DB coupling).
name = "ingest must not import bot or persistence"
type = "forbidden"
source_modules = ["eldritch_dm.ingest"]
forbidden_modules = [
  "eldritch_dm.bot",
  "eldritch_dm.persistence.connection",
  "eldritch_dm.persistence.bootstrap",
  "eldritch_dm.persistence.checkpoint",
  "eldritch_dm.persistence.channel_sessions_repo",
  "eldritch_dm.persistence.persistent_views_repo",
  "eldritch_dm.persistence.riposte_timers_repo",
  "eldritch_dm.persistence.sanitizer_audit_repo",
]

[[tool.importlinter.contracts]]
name = "nothing outside bot may import from bot"
type = "forbidden"
source_modules = [
  "eldritch_dm.config",
  "eldritch_dm.logging",
  "eldritch_dm.mcp",
  "eldritch_dm.persistence",
  "eldritch_dm.safety",
]
forbidden_modules = ["eldritch_dm.bot"]
