[project]
name = "eldritch-dm"
version = "0.1.0"
description = "EldritchDM — Discord D&D 5e bot powered by dm20 + oMLX"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jeremy Schoemaker", email = "jeremy@shoemoney.com" },
]

dependencies = [
  "discord.py>=2.7.1,<3.0",
  "httpx[http2]>=0.27,<0.29",
  "aiosqlite>=0.20,<0.22",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "tenacity>=8.5,<10.0",
  "structlog>=24.4,<26.0",
  "PyMuPDF>=1.24,<2.0",
  "pypdf>=4.3,<6.0",
  "openai>=1.55,<2.0",
  "python-dotenv>=1.0,<2.0",
  "pyyaml>=6.0.3,<7.0",
  "segno>=1.6,<2.0",
]

# Console-script entry point so `pip install -e .` exposes the bot on PATH
# as `eldritch-dm` (D-23). Equivalent to `python -m eldritch_dm.bot`.
[project.scripts]
eldritch-dm = "eldritch_dm.bot.__main__:main"
# Phase 9 / TD-3: v1.0 → v1.1 upgrade tool. Populates pc_classes from existing
# dm20 characters so Riposte eligibility starts firing for legacy PCs.
eldritch-dm-backfill-pc-classes = "eldritch_dm.tools.backfill_pc_classes:main"
# Phase 12 / EVAL-03: LLM-as-judge tactical scoring runner.
eldritch-dm-eval = "eldritch_dm.eval.cli:main"

# Project URLs surface in `pip show` and on PyPI. (D-25)
# TODO confirm repo URL once the repo is published — placeholder for now.
[project.urls]
Homepage = "https://github.com/shoemoney/EldritchDM"
Repository = "https://github.com/shoemoney/EldritchDM"
Issues = "https://github.com/shoemoney/EldritchDM/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<6.0",
  "pytest-mock>=3.12,<4.0",
  "ruff>=0.15,<1.0",
  "respx>=0.21,<1.0",
  "import-linter>=2.0,<3.0",
  "syrupy>=4.6,<5.0",
  # TODO(02-RESEARCH): dpytest deferred — see Q3; dpytest officially caps at discord.py 2.6
  # Plan 02: used in conftest to generate synthetic PDF fixtures for ingest tests
  "reportlab>=4.0,<5.0",
]
# Platform-conditional OCR extras:
# install.sh does uv pip install ocrmac or easyocr based on platform.
# Declared here so they can be pinned / audited in one place.
mac-ocr = ["ocrmac>=1.0,<2.0"]
linux-ocr = ["easyocr>=1.7,<2.0"]
# Phase 11 / OBS-01: optional OpenTelemetry instrumentation.
# Off by default — only paid when OBSERVABILITY_ENABLED=true.
# Install with: pip install -e ".[observability]"
observability = [
  "opentelemetry-api>=1.27,<2.0",
  "opentelemetry-sdk>=1.27,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
  # Phase 13 / MON-01: Prometheus /metrics endpoint at :9090 (opt-in).
  "prometheus_client>=0.20,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eldritch_dm"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = [
  "B008",    # do not perform function calls in default arguments — needed for pydantic Field defaults
  "ASYNC240", # pathlib.Path in async — used only in startup/bootstrap code, not hot paths
]

[tool.ruff.lint.per-file-ignores]
# stress test: pytestmark (skipif) must be declared before subject imports,
# so imports after pytestmark are intentionally post-top-level (E402).
# Long doc comments with command lines exceed 100 chars (E501).
"tests/persistence/test_concurrent_writes.py" = ["E402", "E501"]
# Long assertion failure messages in parametrized tests exceed 100 chars (E501).
"tests/safety/test_sanitizer.py" = ["E501"]
# Ingest tests: mock side-effects with long lambdas exceed 100 chars (E501).
# B017: pytest.raises(Exception) intentional — frozen pydantic raises ValidationError or TypeError.
"tests/ingest/test_ocr.py" = ["E501"]
"tests/ingest/test_schema.py" = ["B017"]
"tests/ingest/test_pipeline.py" = ["E501"]
# Bot cog tests: long mock patch paths and assertion messages exceed 100 chars (E501).
"tests/bot/cogs/test_ingest.py" = ["E501"]
"tests/bot/test_modals.py" = ["E501"]
"tests/bot/test_qr.py" = ["E501"]
"tests/integration/test_phase3_smoke.py" = ["E501"]
# EDM001 corpus: intentionally broken/undefined names are the point of the corpus
"tests/bot/_edm001_corpus/**" = ["F821"]
"tests/bot/_edm001_corpus/*.py" = ["F821"]
# Phase 4 Plan 03: load test scenario builder uses long mock dict literals and per-channel
# timeline lookup lines (clock.rate_limiter_acquires_per_channel.setdefault(...).append(...))
# that exceed 100 chars; readability is better as-is than artificially wrapping.
"tests/integration/test_8player_load.py" = ["E501"]
# Phase 6 Plan 01: combat-flow integration test contains tabular PC/monster fixture
# dict literals and long `with patch("eldritch_dm.bot.dynamic_items.mcp_tools.<verb>", ...)`
# context-manager chains. Mirrors test_8player_load.py precedent — hand-wrapping the
# fixture rows hides the column alignment that makes them readable, and stacking
# 16+ context managers vertically obscures the actual test logic.
"tests/integration/test_combat_flow.py" = ["E501"]
# Gameplay test files: long mock chains and assertion messages may exceed 100 chars
"tests/gameplay/test_rate_limit.py" = ["E501"]
"tests/gameplay/test_exploration_batch.py" = ["E501"]
"tests/gameplay/test_party_mode.py" = ["E501"]
"tests/bot/test_channel_edit_budget.py" = ["E501"]
"tests/bot/cogs/test_exploration_cog.py" = ["E501"]
"tests/bot/test_dynamic_items_declare_real.py" = ["E501"]
# Pre-existing E501 in test files from Plans 01+02
"tests/bot/test_bot_lifecycle.py" = ["E501"]
"tests/bot/test_coalescer.py" = ["E501", "F841"]
"tests/bot/test_dynamic_items_real.py" = ["E501"]
"tests/bot/cogs/test_lobby.py" = ["E501"]
"tests/bot/test_setup_hook.py" = ["E501"]
"tests/bot/test_restart_drill.py" = ["B011", "E501"]
# Phase 5 Plan 01: the PLAN-02-LOCK-SEAM marker in reactions.handle_riposte_click
# is one continuous docstring line so Plan 02's executor can grep it. Wrapping it
# would hide the marker from grep and silently break the handoff between Plans.
"src/eldritch_dm/gameplay/reactions.py" = ["E501"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "slow: gated by RUN_STRESS=1 env var",
  "load: 8-player combat load test (Phase 4 Plan 03) — gated by RUN_LOAD=1 env var",
]
testpaths = ["tests"]

# ── import-linter ─────────────────────────────────────────────────────────────
# Module boundary firewall:
#   - persistence  may NOT import mcp or safety
#   - mcp          may NOT import persistence or safety
#   - safety       may NOT import mcp or persistence
#   - config + logging  may NOT import any of the three subsystems
#   - bot/  is the integration layer and MAY import from everything;
#     but NOTHING outside bot/ may import from bot/
[tool.importlinter]
root_packages = ["eldritch_dm"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "persistence must not import mcp or safety"
type = "forbidden"
source_modules = ["eldritch_dm.persistence"]
forbidden_modules = ["eldritch_dm.mcp", "eldritch_dm.safety"]

[[tool.importlinter.contracts]]
name = "mcp must not import persistence or safety"
type = "forbidden"
source_modules = ["eldritch_dm.mcp"]
forbidden_modules = ["eldritch_dm.persistence", "eldritch_dm.safety"]

[[tool.importlinter.contracts]]
# safety may import persistence.models (pure pydantic data shapes — no SQL, no behavior).
# safety must NOT import persistence.connection, .bootstrap, .checkpoint, or any *_repo.
# (Plan 03 decision: option (a) — relax the import-linter contract for safety→persistence.models
# rather than duplicating the SanitizerAuditRow definition inside the safety module.)
name = "safety must not import mcp or persistence internals"
type = "forbidden"
source_modules = ["eldritch_dm.safety"]
forbidden_modules = [
  "eldritch_dm.mcp",
  "eldritch_dm.persistence.connection",
  "eldritch_dm.persistence.bootstrap",
  "eldritch_dm.persistence.checkpoint",
  "eldritch_dm.persistence.channel_sessions_repo",
  "eldritch_dm.persistence.persistent_views_repo",
  "eldritch_dm.persistence.riposte_timers_repo",
  "eldritch_dm.persistence.sanitizer_audit_repo",
]

[[tool.importlinter.contracts]]
name = "config and logging must not import subsystems"
type = "forbidden"
source_modules = [
  "eldritch_dm.config",
  "eldritch_dm.logging",
]
forbidden_modules = [
  "eldritch_dm.mcp",
  "eldritch_dm.persistence",
  "eldritch_dm.safety",
]

# bot/ is the integration layer; subsystems must remain hermetic and testable without Discord.
[[tool.importlinter.contracts]]
# ingest is a pure-Python pipeline module. It may import mcp.client (to call oMLX)
# and safety (for sanitize_player_input). safety imports persistence.models for audit
# types — that transitive path is permitted (same relaxation as safety's own contract).
# ingest must NOT directly import bot (Discord coupling) or persistence internals (DB coupling).
name = "ingest must not import bot or persistence"
type = "forbidden"
source_modules = ["eldritch_dm.ingest"]
forbidden_modules = [
  "eldritch_dm.bot",
  "eldritch_dm.persistence.connection",
  "eldritch_dm.persistence.bootstrap",
  "eldritch_dm.persistence.checkpoint",
  "eldritch_dm.persistence.channel_sessions_repo",
  "eldritch_dm.persistence.persistent_views_repo",
  "eldritch_dm.persistence.riposte_timers_repo",
  "eldritch_dm.persistence.sanitizer_audit_repo",
]

[[tool.importlinter.contracts]]
name = "nothing outside bot may import from bot"
type = "forbidden"
source_modules = [
  "eldritch_dm.config",
  "eldritch_dm.logging",
  "eldritch_dm.mcp",
  "eldritch_dm.persistence",
  "eldritch_dm.safety",
  "eldritch_dm.gameplay",
]
forbidden_modules = ["eldritch_dm.bot"]

[[tool.importlinter.contracts]]
name = "gameplay must not import bot or ingest"
type = "forbidden"
source_modules = ["eldritch_dm.gameplay"]
forbidden_modules = [
  "eldritch_dm.bot",
  "eldritch_dm.ingest",
]

# Phase 12 / EVAL-01..03: eval/ is an offline evaluator package.
# It may import gameplay (to invoke SmartMonsterDriver._choose_target) and
# observability (for traced_eval spans), but must NOT import bot (Discord
# coupling) or ingest (orthogonal subsystem). Persistence is NOT forbidden
# here because gameplay/smart_monster_driver TYPE_CHECKING-imports persistence
# repo types — eval transitively pulls them in. The hermetic property eval
# needs is "no Discord side-effects," which the bot ban + the _NoopSentinel
# guard in eval/runner.py together enforce.
[[tool.importlinter.contracts]]
name = "eval must not import bot or ingest"
type = "forbidden"
source_modules = ["eldritch_dm.eval"]
forbidden_modules = [
  "eldritch_dm.bot",
  "eldritch_dm.ingest",
]
